[project]
name = "yeetcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Manish Vasu",email = "manishvasubiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
